--- a/.github/workflows/powershell.yaml
+++ b/.github/workflows/powershell.yaml
@@ -6,7 +6,7 @@ name: PSScriptAnalyzer
 
 on:
   push:
-    branches: [ "main", "PSScriptAnalyzer" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
