--- a/.github/workflows/powershell.yaml
+++ b/.github/workflows/powershell.yaml
@@ -20,14 +20,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run PSScriptAnalyzer
-        uses: ./
+        uses: microsoft/psscriptanalyzer-action@v1.1
         with:
-          # Check https://github.com/microsoft/psscriptanalyzer-action for more info about the options.
-          # The below set up runs PSScriptAnalyzer to your entire repository and runs some basic security rules.
           path: .\
-          recurse: true 
-          # Include your own basic security rules. Removing this option will run all the rules 
-          includeRule: '"PSAvoidGlobalAliases", "PSAvoidUsingConvertToSecureStringWithPlainText"'
+          recurse: true
+          excludeRule: '"PSAvoidUsingInvokeExpression", "PSUseShouldProcessForStateChangingFunctions", "PSAvoidUsingWriteHost", "PSAvoidUsingCmdletAliases"'
           output: results.sarif
 
       - name: Upload thisbuild artifacts - apps
