--- a/.github/workflows/powershell.yaml
+++ b/.github/workflows/powershell.yaml
@@ -38,4 +38,4 @@ jobs:
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif_file: results.sarif
+          sarif_file: System Application_ErrorLog_WW.sarif
