--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -25,7 +25,13 @@ jobs:
         if: github.repository_owner == 'microsoft'
         run: |
           $errorActionPreference = "Stop"
-          Get-ChildItem -Path (Join-Path "." "Tests/WorkflowSanitation") -Filter "*.Test.ps1" -File | ForEach-Object {
-            Write-Host "Running $($_.Name)"
-            . $_.FullName
+          try {
+            Get-ChildItem -Path (Join-Path "." "Tests/WorkflowSanitation") -Filter "*.Test.ps1" -File | ForEach-Object {
+              Write-Host "Running $($_.Name)"
+              . $_.FullName
+            }
+          }
+          catch {
+            Write-Host "::Error::Error when running tests. The Error was $($_.Exception.Message)"
+            $host.SetShouldExit(1)
           }
